force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/tc9_bgl__Acc_Default_Accounts__c.object-meta.xml
<CustomObject>
    <description>The Detailed Posting Accounts object holds all of the default posting accounts associated with pay codes and leave rules</description>
    <label>Accounting Default Accounts</label>
    <nameField>
        <displayFormat>ACCDPACC-{0000000}</displayFormat>
        <label>Detailed Posting Accounts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Default Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>