force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/fields/tc9_bgl__Earnings_RCTI_Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Earnings_RCTI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earnings RCTI Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Natural Account</value>
        </filterItems>
        <filterItems>
            <field>$Source.tc9_bgl__Accounting_System__c</field>
            <operation>equals</operation>
            <valueField>tc9_bgl__Acc_Segments__c.tc9_bgl__Accounting_System__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Accounting Default Accounts (Earnings RCTI Account)</relationshipLabel>
    <relationshipName>Accounting_Default_Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>