force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/fields/tc9_bgl__Leave_Accrual_Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Leave_Accrual_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Accrual Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a valid leave accrual account</errorMessage>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Natural Account</value>
        </filterItems>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.tc9_bgl__Accounting_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.tc9_bgl__Accounting_System__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Accounting Default Accounts</relationshipLabel>
    <relationshipName>Accounting_Default_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>