force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/fields/tc9_bgl__Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Rule</label>
    <referenceTo>tc9_pr__Leave_Rule__c</referenceTo>
    <relationshipLabel>Accounting Default Accounts</relationshipLabel>
    <relationshipName>Accounting_Default_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>