force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/recordTypes/tc9_bgl__Allowances.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Allowances</fullName>
    <active>true</active>
    <description>Default accounts for earnings lines</description>
    <label>Allowances</label>
</RecordType>