force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/recordTypes/tc9_bgl__Deductions.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Deductions</fullName>
    <active>true</active>
    <description>Default accounts for deductions</description>
    <label>Deductions</label>
</RecordType>