force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/recordTypes/tc9_bgl__Earnings.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Earnings</fullName>
    <active>true</active>
    <description>Default accounts for earnings</description>
    <label>Earnings</label>
</RecordType>