force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/recordTypes/tc9_bgl__Expenses.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Expenses</fullName>
    <active>true</active>
    <description>Default Accounts for Expenses</description>
    <label>Expenses</label>
</RecordType>