force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/recordTypes/tc9_bgl__Leave_Rules.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Leave_Rules</fullName>
    <active>true</active>
    <description>Default Accounts for Leave Rules</description>
    <label>Leave Rules</label>
</RecordType>