force-app/main/default/objects/tc9_bgl__Acc_Default_Accounts__c/listViews/tc9_bgl__All.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_bgl__Accounting_System__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_bgl__Pay_Code__c</columns>
    <columns>tc9_bgl__Leave_Rule__c</columns>
    <columns>tc9_bgl__Earnings_PAYG_Account__c</columns>
    <columns>tc9_bgl__Earnings_RCTI_Account__c</columns>
    <columns>tc9_bgl__Balance_Sheet_Account__c</columns>
    <columns>tc9_bgl__Expense_Account__c</columns>
    <columns>tc9_bgl__Leave_Accrual_Account__c</columns>
    <columns>tc9_bgl__Leave_Liability_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>